IPv6 Local Mobility Anchor Address mobility option's code and reserved fields are parsed as 2 bytes instead of 1
This issue was migrated from bug 10630 in our old bug tracker.
Original bug information:
Reporter: boa…@gma…
Status: RESOLVED FIXED
Product: Wireshark
Component: Dissection engine (libwireshark)
OS: Windows 7
Platform: x86-64
Version: 1.12.1
Attachments:
IPv6_Local_Mobility_Anchor_Address_mobility_option.pcap: IPv6 Local Mobility Anchor Address mobility option